Cleaning, styling, update date calculation, add progress, add turbolinks progress bar

--- a/app/views/activities/_activity.js.erb
+++ b/app/views/activities/_activity.js.erb
@@ -10,3 +10,6 @@ var table = $("#activities");
   <% end %>
 <% end %>
 
+$("#activities").siblings('tfoot').find("*[id^='activity_']").each(function(i,a){
+  $(a).val('');
+});
