--- a/app/views/settings/edit.html.erb
+++ b/app/views/settings/edit.html.erb
@@ -1,6 +1,10 @@
-<h1><%=	t(:edit_setting, scope: 'actions') %></h1>
+<h1 class="title"><%=	t(:edit_setting, scope: 'actions') %></h1>
 
-<%= render 'form', action: t(:edit, scope: 'actions') %>
+<div class="row">
+  <div class="callout small-12 small-centered">
+    <%= render 'form', action: t(:edit, scope: 'actions') %>
 
-<%= link_to t(:show, scope: 'actions'), @setting %> |
-<%= link_to t(:back, scope: 'actions'), settings_path %>
+    <%= link_to t(:back, scope: 'actions'), settings_path, class: 'button secondary' %>
+  </div>
+</div>
+
