--- a/app/views/workers/edit.html.erb
+++ b/app/views/workers/edit.html.erb
@@ -1,8 +1,10 @@
-<div class=" columns">
-  <h1><%=	t(:edit_worker, scope: 'actions') %></h1>
+<h1 class="title"><%=	t(:edit_worker, scope: 'actions') %></h1>
 
-  <%= render 'form', action: t(:edit, scope: 'actions') %>
+<div class="row">
+  <div class="callout small-12 small-centered">
+    <%= render 'form', action: t(:edit, scope: 'actions') %>
 
-  <%= link_to t(:show, scope: 'actions'), @worker, class: 'button' %>
-  <%= link_to t(:back, scope: 'actions') , workers_path, class: 'button secondary' %>
+    <%= link_to t(:back, scope: 'actions'), workers_path, class: 'button secondary' %>
+  </div>
 </div>
+
