--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,11 @@
 @import "settings";
 @import "foundation_and_overrides";
 
+html.turbolinks-progress-bar::before {
+  background-color: $primary-color !important;
+  height: 5px !important;
+}
+
 #core {
   //margin: 0 30px;
   //margin-top: -15px;
