--- a/app/views/families/_form.html.erb
+++ b/app/views/families/_form.html.erb
@@ -1,11 +1,19 @@
 <%= simple_form_for(@family) do |f| %>
-  <%= f.error_notification %>
+    <% if @family.errors.any? %>
+        <div id="" class="alert callout">
+          <ul>
+            <% @family.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
 
-      <div class="form-inputs field">
-        <%= f.input :label, label: t(:label, scope: 'actions') %>
-      </div>
+    <div class="form-inputs field">
+      <%= f.input :label, label: t(:label, scope: 'actions') %>
+    </div>
 
-      <div class="form-actions">
-        <%= f.button :submit, class:'success button', value: action %>
-      </div>
+    <div class="form-actions">
+      <%= f.button :submit, class:'success button', value: action %>
+    </div>
 <% end %>
