--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,9 +1,9 @@
-<div class="row expanded">
-  <div class=" columns">
-    <h1> <%= t(:new_project, scope: 'actions') %></h1>
+<h1 class="title"><%=	t(:new_project, scope: 'actions') %></h1>
 
+<div class="row">
+  <div class="callout small-12 small-centered">
     <%= render 'form', action: t(:create, scope: 'actions') %>
 
-    <%= link_to t(:back, scope: 'actions'), projects_path, class: 'secondary button' %>
+    <%= link_to t(:back, scope: 'actions'), projects_path, class: 'button secondary' %>
   </div>
 </div>
