--- a/app/views/settings/_form.html.erb
+++ b/app/views/settings/_form.html.erb
@@ -1,15 +1,13 @@
 <%= form_for(@setting) do |f| %>
-  <% if @setting.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@setting.errors.count, "error", scope: 'actions') %> prohibited this setting from being saved:</h2>
-
-      <ul>
-      <% @setting.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+    <% if @setting.errors.any? %>
+        <div id="" class="alert callout">
+          <ul>
+            <% @setting.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
 
   <div class="field">
     <%= f.label t(:label, scope: 'actions') %><br>
