--- a/app/views/workers/new.html.erb
+++ b/app/views/workers/new.html.erb
@@ -1,6 +1,10 @@
-<div class=" columns">
-  <h1><%= t(:new_worker, scope: 'actions') %></h1>
-  <%= render 'form', action: t(:create, scope: 'actions') %>
 
-  <%= link_to t(:back, scope: 'actions'), workers_path, class: 'button secondary' %>
+<h1 class="title"><%=	t(:new_worker, scope: 'actions') %></h1>
+
+<div class="row">
+  <div class="callout small-12 small-centered">
+    <%= render 'form', action: t(:create, scope: 'actions') %>
+
+    <%= link_to t(:back, scope: 'actions'), workers_path, class: 'button secondary' %>
+  </div>
 </div>
