--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -15,6 +15,8 @@
       <%= select_tag('activity[year]', options_for_select((@start_at_year..@stop_at_year)), include_blank: true)%>
       <%= label_tag(:q, t(:worker, scope: 'actions')) %>
       <%= select_tag 'activity[worker]', options_from_collection_for_select(@workers, 'id', 'name'), include_blank: true%>
+      <%= label_tag(:q, t(:task, scope: 'actions')) %>
+      <%= select_tag 'activity[task]', options_from_collection_for_select(@tasks, 'id', 'label'), include_blank: true%>
       <%= submit_tag(t(:filter, scope: 'actions')) %>
     <% end %>
   </div>
