--- a/app/views/application/_top_bar.html.erb
+++ b/app/views/application/_top_bar.html.erb
@@ -1,22 +1,25 @@
 <div class="top-bar">
   <div class="top-bar-left">
     <ul class="dropdown menu" data-dropdown-menu>
-      <li class="menu-text">Open Project</li>
-      <li>
-        <%=link_to t(:tasks, scope: 'actions'), project_tasks_path(@project) unless @project.nil? or @project.new_record? %>
-      </li>
+      <li class="menu-text"><%= link_to 'Open Project', root_url %></li>
+      <%- if current_user -%>
 
-      <li>
-        <%=link_to t(:activities, scope: 'actions'), project_activities_path(@project) unless @project.nil? or @project.new_record? %>
-      </li>
-      <li>
-        <%=link_to t(:planning, scope: 'actions'), provisional_schedule_project_tasks_path(@project) unless @project.nil? or @project.new_record? %>
-      </li>
+        <li>
+          <%=link_to t(:tasks, scope: 'actions'), project_tasks_path(@project) unless @project.nil? or @project.new_record? %>
+        </li>
 
-      <li>
-        <%=link_to t(:summary, scope: 'actions'), summary_project_path(@project) unless @project.nil? or @project.new_record? %>
-      </li>
-      <li><%= link_to '', settings_path, class: "fi-wrench" %></li>
+        <li>
+          <%=link_to t(:activities, scope: 'actions'), project_activities_path(@project) unless @project.nil? or @project.new_record? %>
+        </li>
+        <li>
+          <%=link_to t(:planning, scope: 'actions'), provisional_schedule_project_tasks_path(@project) unless @project.nil? or @project.new_record? %>
+        </li>
+
+        <li>
+          <%=link_to t(:summary, scope: 'actions'), summary_project_path(@project) unless @project.nil? or @project.new_record? %>
+        </li>
+        <li><%= link_to '', settings_path, class: "fi-wrench" %></li>
+      <%- end %>
     </ul>
   </div>
   <div class="top-bar-right user">
@@ -31,19 +34,27 @@
     <%= link_to "Changer de projet", projects_path, class: "button warning" %>
   </div>
   <div class="top-bar-right project-name">
-    <%- unless @project.nil? or @project.new_record? %>
-        <span><%= @project.name %></span>
+    <%- if current_user -%>
+
+      <%- unless @project.nil? or @project.new_record? %>
+          <span><%= @project.name %></span>
+      <%- end %>
     <%- end %>
-   </div>
+  </div>
+
 
   <div class="top-bar-right menu2">
-    <ul class="menu">
-      <li>
-        <%=link_to t(:categories, scope: 'actions'), families_path %>
-      </li>
-      <li>
-        <%=link_to t(:workers, scope: 'actions'), workers_path %>
-      </li>
+    <%- if current_user -%>
+
+      <ul class="menu">
+        <li>
+          <%=link_to t(:categories, scope: 'actions'), families_path %>
+        </li>
+        <li>
+          <%=link_to t(:workers, scope: 'actions'), workers_path %>
+        </li>
       </ul>
+    <%- end %>
+
   </div>
 </div>
