--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -8,10 +8,10 @@
           </ul>
         </div>
     <% end %>
-    <%= f.input :name, label: t(:name)%>
+    <%= f.input :name, label: t(:name, scope: 'actions')%>
+    <%= f.input :estimated_start_at, label: t(:estimated_start_at, scope: 'actions'), as: :string, input_html: {type: 'date'} %>
+    <%= f.input :estimated_end_at, label: t(:estimated_end_at, scope: 'actions'), as: :string, input_html: {type: 'date'} %>
+    <%= f.input :estimated_duration, label: t(:estimated_duration, scope: 'actions'), input_html: {min: 0} %>
     <%= f.input :is_close, label: t(:is_close, scope: 'actions') %>
-    <%= f.input :estimated_start_at, label: t(:estimated_start_at), as: :string, input_html: {type: 'date'} %>
-    <%= f.input :estimated_end_at, label: t(:estimated_end_at), as: :string, input_html: {type: 'date'} %>
-    <%= f.input :estimated_duration, label: t(:estimated_duration, scope: 'actions') %>
     <%= f.button :submit, value: action , class: 'success button' %>
 <% end %>
