Adds cost + summary.

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -17,6 +17,7 @@
       <th><%= t(:real_duration, scope: 'actions') %></th>
       <th><%= t(:remaining, scope: 'actions') %></th>
       <th><%=	t(:percent_progress, scope: 'actions') %></th>
+      <th><%= t(:cost, scope: :actions) %></th>
       <th colspan="1"></th>
     </tr>
     </thead>
@@ -34,6 +35,7 @@
         <td><%= project.real_duration %></td>
         <td><span class="<%= project.difference_hour > 0 ? 'lbl-success' : 'lbl-alert' %>" ><%= project.difference_hour %></span></td>
         <td><%= progress project.percent_progress %></td>
+        <td><%= project.cost %> €</td>
         <td><%= link_to "<i class='fi-pencil'></i>".html_safe, edit_project_path(project) %> <%= link_to "<i class='fi-x'></i>".html_safe, project, method: :delete, data: { confirm: t(:confirm, scope: 'actions') } %></td>
       </tr>
     <% end %>
