--- a/app/views/activities/_activity_row.html.haml
+++ b/app/views/activities/_activity_row.html.haml
@@ -10,4 +10,5 @@
       %i.fi-alert
     = link_to activity.task.label, project_task_path(@project, activity.task) unless activity.task.nil?
   %td= activity.observation
+  %td= "#{activity.cost} €"
   %td= [link_to("<i class='fi-pencil'></i>".html_safe, edit_project_activity_path(@project, activity)), link_to("<i class='fi-x'></i>".html_safe, project_activity_path(@project, activity), method: :delete, data: { confirm: t(:confirm, scope: 'actions') })].join(' ').html_safe
