--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -42,6 +42,7 @@
       <th><%= t(:num_hours, scope: 'actions') %></th>
       <th><%= t(:task, scope: 'actions') %></th>
       <th><%= t(:observation, scope: 'actions') %></th>
+      <th><%= t(:cost, scope: 'actions') %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
